# vibe-engineering-kanban

./: .env.example  Dockerfile  PROJECT_STATUS.md  docker-compose.yml  test_api.ps1  test_card_update.sh  test_update.py
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/db/: __init__.py
backend/app/models/: __init__.py
backend/app/routes/: ai.py  auth.py  board.py  health.py  test_auth.py
docs/: API_SPEC.md  CARD_UPDATE_FIX.md  DATABASE_SCHEMA.md  PART2_COMPLETE.md  PART2_TESTING.md  PART3_SUMMARY.md  PART3_TESTING.md  PART4_COMPLETE.md  PART4_TESTING.md  PLAN.md
frontend/: AGENTS.md  next.config.ts  package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: EditCardModal.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LoginForm.module.css  LoginForm.test.tsx  LoginForm.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: auth.test.ts  auth.ts
frontend/tests/: auth.spec.ts
scripts/: start.bat  start.sh  stop.bat  stop.sh
