[project]
name = "kanban-backend"
version = "0.1.0"
description = "Kanban board API with AI integration"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "openai>=1.3.0",
    "httpx>=0.25.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
